--- a/references.bib
+++ b/references.bib
@@ -1,10 +1,17 @@
+@article{christen:2024,
+  title={On harmonoic oscillator hazard functions},
+  author={Christen, J.A. and Rubio, F.J.},
+  journal={arXiv preprint},
+  year={2024}
+}
+
+
 @article{christen:2023,
   title={Dynamic Survival Analysis: Modelling the Hazard Function via Ordinary Differential Equations},
   author={Christen, J.A. and Rubio, F.J.},
   journal={arXiv preprint arXiv:2308.05205},
   year={2023}
 }
-
 
 @article{jones:2015,
   title={Log-location-scale-log-concave distributions for survival and reliability analysis},
