--- a/Example.Rmd
+++ b/Example.Rmd
@@ -403,16 +403,23 @@ curve(p_gammaPGW,0,15, cex.lab = 1.5, lwd = 2, lty = 2, add = TRUE)
 #--------------------------------------------------------------------------------------------------
 
 par(mfrow = c(2,2))
-p_eta <- Vectorize(function(t) dgamma(t, shape = 0.5, scale = 1))
-curve(p_eta,0,2, n = 1000, xlab = ~eta, ylab = "Prior Density",
+p_eta <- Vectorize(function(w0){
+  
+ tempf <- Vectorize(function(eta) dgamma(w0, shape = 10,
+       scale = 0.1*2*pi/(5*sqrt(abs(eta^2-1))))*dgamma(eta, shape = 4, scale = 0.25))
+
+out <- integrate(tempf,0,Inf)$value
+return(out)
+})
+curve(p_eta,0,5, n = 1000, xlab = ~eta, ylab = "Prior Density",
       cex.axis = 1.5, cex.lab = 1.5, lwd = 2, lty = 2)
 
-p_w0 <- Vectorize(function(t) dgamma(t, shape = 2, scale = 1))
-curve(p_w0,0,10, n = 1000, xlab = expression(w_0), ylab = "Prior Density",
+p_w0 <- Vectorize(function(t) dgamma(t, shape = 10, scale = 0.1))
+curve(p_w0,0,5, n = 1000, xlab = expression(w_0), ylab = "Prior Density",
       cex.axis = 1.5, cex.lab = 1.5, lwd = 2, lty = 2)
 
-p_hb <- Vectorize(function(t) dgamma(t, shape = 0.1, scale = 0.1))
-curve(p_hb,0,0.1, n = 1000, xlab = expression(h_b), ylab = "Prior Density",
+p_hb <- Vectorize(function(t) dgamma(t, shape = 0.1, scale = 1))
+curve(p_hb,0,0.2, n = 1000, xlab = expression(h_b), ylab = "Prior Density",
       cex.axis = 1.5, cex.lab = 1.5, lwd = 2, lty = 2)
 
 
@@ -456,9 +463,9 @@ ind <- seq(burn,NS,thin)
 
 
 # Summaries
-summHR <- apply(exp(chainHO[ind,1:3]),2,summary)
-colnames(summHR) <- c("eta","w_0","h_b")
-kable(summHR, digits = 3)
+summHO <- apply(exp(chainHO[ind,1:3]),2,summary)
+colnames(summHO) <- c("eta","w_0","h_b")
+kable(summHO, digits = 3)
 
 # KDEs
 etap <- exp(chainHO[,1][ind])
