--- a/Example.Rmd
+++ b/Example.Rmd
@@ -648,9 +648,11 @@ curve(predsHO, 0, 20, n = 1000, xlab = "Time", ylab = "Predictive Survival",
       cex.axis = 1.5, cex.lab = 1.5, lwd =2, lty = 1, ylim = c(0,1))
 curve(predsW, 0, max(survtimes), lwd= 2, lty = 2, col = "gray", add = TRUE)
 curve(predsPGW, 0, max(survtimes), lwd= 2, lty = 3, col = "gray", add = TRUE)
-points(km$time, km$surv, type = "l", col = "green", lwd = 2, lty = 1)
+points(km$time, km$surv, type = "l", col = "gray", lwd = 2, lty = 1)
+curve(predsHO, 0, 20, n = 1000, xlab = "Time", ylab = "Predictive Survival", 
+      cex.axis = 1.5, cex.lab = 1.5, lwd =2, lty = 1, ylim = c(0,1),add=TRUE)
 legend("topright", legend = c("HO","Weibull","PGW","KM"), lty = c(1,2,3,1), 
-       lwd = c(2,2,2,2), col = c("black","gray","gray","green"))
+       lwd = c(2,2,2,2), col = c("black","gray","gray","gray"))
 ```
 
 
