--- a/references.bib
+++ b/references.bib
@@ -9,8 +9,8 @@
 @article{christen:2023,
   title={Dynamic Survival Analysis: Modelling the Hazard Function via Ordinary Differential Equations},
   author={Christen, J.A. and Rubio, F.J.},
-  journal={arXiv preprint arXiv:2308.05205},
-  year={2023}
+  journal={Statistical Methods in Medical Research},
+  year={2024}
 }
 
 @article{jones:2015,
