--- a/references.bib
+++ b/references.bib
@@ -1,5 +1,5 @@
 @article{christen:2024,
-  title={On harmonoic oscillator hazard functions},
+  title={On harmonic oscillator hazard functions},
   author={Christen, J.A. and Rubio, F.J.},
   journal={arXiv preprint},
   year={2024}
