--- a/Example.Rmd
+++ b/Example.Rmd
@@ -20,7 +20,7 @@ The harmonic oscillator hazard model is defined through the second order ODE:
 h''(t) + 2 \eta w_0 h'(t) + w^2_0 (h(t) - h_b) = 0,
 \label{eq:harmonic_osc}    
 \end{equation}
-where $w_0 > 0$ is called the "natural frequency", $\eta >0$ is the "damping coefficient". The shift parameter $h_b > 0$ ensures that the solution is positive
+where $w_0 > 0$ is called the "natural frequency", $\eta >0$ is the "damping coefficient". The resulting model has closed-form hazard and cumulative hazard functions, facilitating likelihood and Bayesian inference on the parameters, as detailed in @christen:2024.
 
 
 The following R code presents an example from @christen:2024 where we fit the damped harmonic oscillator model to the `rotterdam` data set from the R package `survival`. We present both Likelihood-based and Bayesian analyses.
@@ -269,12 +269,12 @@ legend("topright", legend = c("Harmonic Oscillator","Weibull","PGW","KM"), lty =
 #--------------------------------------------------------------------------------------------------
 
 par(mfrow = c(1,2))
-p_sigmaW <- Vectorize(function(t) dgamma(t, shape = 2, scale = 2))
-curve(p_sigmaW,0,15, n = 1000, xlab = ~sigma, ylab = "Prior Density", 
+p_sigmaW <- Vectorize(function(t) dgamma(t, shape = 0.001, scale = 1/0.001))
+curve(p_sigmaW,0,10, n = 1000, xlab = ~sigma, ylab = "Prior Density", 
       cex.axis = 1.5, cex.lab = 1.5, lwd = 2, lty = 2)
 
-p_nuW <- Vectorize(function(t) dgamma(t, shape = 2, scale = 2))
-curve(p_nuW,0,15, n = 1000, xlab = ~nu, ylab = "Prior Density", 
+p_nuW <- Vectorize(function(t) dgamma(t, shape = 0.001, scale = 1/0.001))
+curve(p_nuW,0,10, n = 1000, xlab = ~nu, ylab = "Prior Density", 
       cex.axis = 1.5, cex.lab = 1.5, lwd = 2, lty = 2)
 
 
@@ -331,16 +331,16 @@ curve(p_nuW,1.1,1.5, n = 1000, xlab = ~kappa, ylab = "Prior Density",
 #--------------------------------------------------------------------------------------------------
 
 par(mfrow = c(1,3))
-p_sigmaPGW <- Vectorize(function(t) dgamma(t, shape = 2, scale = 2))
-curve(p_sigmaPGW,0,15, n = 1000, xlab = ~sigma, ylab = "Prior Density", 
+p_sigmaPGW <- Vectorize(function(t) dgamma(t, shape = 0.001, scale = 1/0.001))
+curve(p_sigmaPGW,0,10, n = 1000, xlab = ~sigma, ylab = "Prior Density", 
       cex.axis = 1.5, cex.lab = 1.5, lwd = 2, lty = 2)
 
-p_nuPGW <- Vectorize(function(t) dgamma(t, shape = 2, scale = 2))
-curve(p_nuPGW,0,15, n = 1000, xlab = ~nu, ylab = "Prior Density", 
+p_nuPGW <- Vectorize(function(t) dgamma(t, shape = 0.001, scale = 1/0.001))
+curve(p_nuPGW,0,10, n = 1000, xlab = ~nu, ylab = "Prior Density", 
       cex.axis = 1.5, cex.lab = 1.5, lwd = 2, lty = 2)
 
-p_gammaPGW <- Vectorize(function(t) dgamma(t, shape = 2, scale = 2))
-curve(p_gammaPGW,0,15, n = 1000, xlab = ~gamma, ylab = "Prior Density", 
+p_gammaPGW <- Vectorize(function(t) dgamma(t, shape = 0.001, scale = 1/0.001))
+curve(p_gammaPGW,0,10, n = 1000, xlab = ~gamma, ylab = "Prior Density", 
       cex.axis = 1.5, cex.lab = 1.5, lwd = 2, lty = 2)
 
 par(mfrow = c(1,1))
@@ -404,15 +404,15 @@ curve(p_gammaPGW,0,15, cex.lab = 1.5, lwd = 2, lty = 2, add = TRUE)
 
 par(mfrow = c(2,2))
 p_eta <- Vectorize(function(t) dgamma(t, shape = 0.001, scale = 1/0.001))
-curve(p_eta,0,5, n = 1000, xlab = ~eta, ylab = "Prior Density",
+curve(p_eta,0,10, n = 1000, xlab = ~eta, ylab = "Prior Density",
       cex.axis = 1.5, cex.lab = 1.5, lwd = 2, lty = 2)
 
 p_w0 <- Vectorize(function(t) dgamma(t, shape = 0.001, scale = 1/0.001))
-curve(p_w0,0,5, n = 1000, xlab = expression(w_0), ylab = "Prior Density",
+curve(p_w0,0,10, n = 1000, xlab = expression(w_0), ylab = "Prior Density",
       cex.axis = 1.5, cex.lab = 1.5, lwd = 2, lty = 2)
 
 p_hb <- Vectorize(function(t) dgamma(t, shape = 0.001, scale = 1/0.001))
-curve(p_hb,0,5, n = 1000, xlab = expression(h_b), ylab = "Prior Density",
+curve(p_hb,0,10, n = 1000, xlab = expression(h_b), ylab = "Prior Density",
       cex.axis = 1.5, cex.lab = 1.5, lwd = 2, lty = 2)
 
 
@@ -596,12 +596,14 @@ curve(predhHO, 0, 20, n = 1000, xlab = "Time", ylab = "Predictive Hazard",
 
 
 # Comparison with Weibull and PGW
+#pdf("predhaz.pdf", height = 6, width = 8)
 curve(predhHO, 0, 20, n = 1000, xlab = "Time", ylab = "Predictive Hazard", 
-      cex.axis = 1.5, cex.lab = 1.5, lwd =2, lty = 1, ylim = c(0,0.1))
+      cex.axis = 1.5, cex.lab = 1.5, lwd =2, lty = 1, ylim = c(0,0.11))
 curve(fithw, 0, max(survtimes), lwd= 2, lty = 2, col = "gray", add = TRUE)
 curve(fithpgw, 0, max(survtimes), lwd= 2, lty = 3, col = "gray", add = TRUE)
 legend("topleft", legend = c("HO","Weibull", "PGW"), lty = c(1,2,3), 
        lwd = c(2,2,2), col = c("black","gray","gray"))
+#dev.off()
 ``` 
 
 
@@ -637,6 +639,7 @@ predsHO <- Vectorize(function(t){
 })
 
 # Comparison: survival functions
+#pdf("predsurv.pdf", height = 6, width = 8)
 curve(predsHO, 0, 20, n = 1000, xlab = "Time", ylab = "Predictive Survival", 
       cex.axis = 1.5, cex.lab = 1.5, lwd =2, lty = 1, ylim = c(0,1))
 curve(predsW, 0, max(survtimes), lwd= 2, lty = 2, col = "gray", add = TRUE)
@@ -646,6 +649,7 @@ curve(predsHO, 0, 20, n = 1000, xlab = "Time", ylab = "Predictive Survival",
       cex.axis = 1.5, cex.lab = 1.5, lwd =2, lty = 1, ylim = c(0,1),add=TRUE)
 legend("topright", legend = c("HO","Weibull","PGW","KM"), lty = c(1,2,3,1), 
        lwd = c(2,2,2,2), col = c("black","gray","gray","gray"))
+#dev.off()
 ```
 
 
